[project]
name = "web-browsing-agent"
version = "0.1.0"
description = "Web Browsing Multi-Agent Workflow Utilizing CrewAI and Stagehand"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.141.0",
    "nest-asyncio>=1.6.0",
    "stagehand>=0.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "browser_agent"]
